# linux_shell

./: CMakeLists.txt  Logica_Prog_C-.code-workspace  loop_1  loop_3  seq_11.cpp  seq_13.cpp  test.txt
Classes/: 02_05-2.cpp  decAula_a.cpp  decLista1_1.cpp  decLista1_2.cpp  decLista1_5.cpp  decLista1_min.cpp
Classes/output/: 02_05-2  decLista1_1  decLista1_4  decLista1_6  decLista1_min copy  desconto
Flowcharts/: Matriz2D-B.fprg  Matriz2D-C.fprg  Matriz2D-D.fprg  Matriz2D-F.fprg  Matriz2D-H.fprg  Matriz2D-I.fprg  Matriz2D-J.fprg  Matriz2D-L.fprg  Matriz2D-M.fprg  Matriz2D-N.fprg  Matriz2D-O.fprg  Matriz2D-P.fprg  Registro-2.fprg  Registro-3.fprg  apliMatirzF.fprg  apliMatirzF2.fprg  apliMatrizE.fprg  loop_1  loop_looping.drawio
LP_C++/: seq_4.cpp  seq_5.cpp  seq_6.cpp  seq_7.cpp
LP_C++/lista_decisão/: decLista1_3.cpp  decLista1_4.cpp  decLista1_6.cpp
LP_C++/lista_for/: for_1.cpp  for_2.cpp  for_3.cpp
LP_C++/lista_funçoes/: trabalhoFinal.cpp
LP_C++/lista_loop/: loop_1.cpp  loop_1.py  loop_2.cpp  loop_5.cpp  loop_6.cpp  loop_7.cpp
LP_C++/lista_loop2/: loop_1.cpp  loop_1.py  loop_2.cpp  loop_2.py  loop_3.cpp  loop_4.cpp  loop_5.cpp  loop_6.cpp
LP_C++/lista_loop3/: for_1.cpp  for_2.cpp  l_1.cpp  l_10.cpp  l_11.cpp  l_2.cpp  l_3.cpp  l_4.cpp  l_5.cpp  l_6.cpp  l_7.cpp  l_8.cpp  l_9.cpp  loop_10
LP_C++/lista_loop4/: lista1.cpp  lista2.cpp  lista3.cpp  lista4.cpp  lista5.cpp
LP_C++/lista_sequencia/: seq_12.cpp  seq_14.cpp  seq_7.cpp  seq_9.cpp
LP_C++/lista_vetores/: entendimento_vetores  vet_3.cpp  vet_4.cpp  vet_5.cpp
LP_C++/vetores/: ex_2.cpp  ex_4.cpp
LP_C++_sequencia/: seq_1.cpp  seq_10.cpp  seq_11.cpp  seq_12.cpp  seq_13.cpp  seq_2.cpp  seq_3.cpp  seq_4.cpp  seq_6.cpp  seq_8.cpp  seq_9.cpp
LP_C++_sequencia/output/: seq_2
LP_C++_sequencia/vetores/: ex_1.cpp  ex_3.cpp
LP_Python/Cap_03/: E3-10.py  E3-11.py  E3-12.py  E3-13.py  E3-14.py  E3-15.py  E3-7.py  E3-8.py  E3-9.py  input.py
LP_Python/Cap_04/: E4.02.py  E4.3.py  E4.4.py  E4.6.py  E4.8.py  E4.9.py  if-01.py
LP_Python/Cap_05/: Contagem.py  E5.11.py  E5.12.py  E5.13.py  E5.14.py  E5.15.py  E5.16.py  E5.2.py  E5.23.py  E5.24.py  E5.3.py  E5.4.py  E5.5.py  E5.6.py  E5.7.py  E5.8.py  E5.8b.py
LP_Python/Cap_06/: E6.1.py  E6.2.py  E6.3.py  E6.4.py  E6.5.py
LP_Python/Python_projects_book/: 1_loop.py  binarioToDec.py  pesquisa_bi.py
LP_Python/decision/: E_a.py  E_b.py  diagram.dio
LP_Python/loop_looping/: lista_loop.tar.xz  lista_loops.7z  loopB_1.py  loopB_b.py  loopB_c.py  loopB_d.py
LP_Python/vetores/: ListEx_6.12.py  ListEx_6.2.py  List_01.py  List_02.py  List_04.py  for_lista.py  list_range.py  procura_lista.py  while_lista.py
LP__book/: seqB_1.cpp  seqB_11.cpp  seqB_13.cpp  seqB_4.cpp
LP__book/Cap1_sequencia/: hipo.cpp  seqB_10.cpp  seqB_12.cpp  seqB_14.cpp  seqB_5.cpp  seq_B15.cpp
LP__book/Cap2_decisao/: decB_1.cpp  decB_12.cpp  decB_2.cpp  decB_3.cpp  decB_8.cpp  decB_9.cpp
LP__book/Cap3_loop&laços/: loopB_2.cpp
LP__book/Cap3_looping/: loopB_10.c  loopB_5.cpp  loopB_6.cpp  loopB_7.c  loopB_9.c
LP__book/output/: decB_01  seqB_1  seqB_11  seqB_3
LP_book/Cap1_sequencia/: seqB_1.cpp  seqB_11.cpp  seqB_13.cpp  seqB_2.cpp  seqB_3.cpp  seqB_4.cpp
LP_book/Cap2_decisao/: decB_01.cpp  decB_10.cpp  decB_11.cpp  decB_4.cpp  decB_5.cpp  decB_7.cpp
LP_book/Cap3_looping/: loopB_1.cpp  loopB_3.cpp  loopB_4.cpp  loopB_8.c  loopB_9.c
LP_book/Cap4_matrizUni/: entendimento.md
LP_book/Cap5_apliMatriz/: ex_pesquisaBinaria.py  ex_pesquisaSeque.py  flowchart.drawio  matriz_a.py  matriz_b.cpp  matriz_c.cpp  matriz_d.cpp  matriz_e.cpp  matriz_f.cpp  matriz_g.cpp  mkmatriz.h
LP_book/Cap6_2DMatriz/: makeMatriz.py  matriz2D-h.py  matriz2D_a.py  matriz2D_b.py  matriz2D_c.py  matriz2D_d.py  matriz2D_e.cpp  matriz2D_e.py  matriz2D_f.py  matriz2D_g.py  matriz2D_i.py  matriz2D_j.py  matriz2D_k.py  matriz2D_l.py  matriz2D_m.py  matriz2D_n.py  matriz2D_o.py  matriz2D_p.py
LP_book/algoritimos/: ordenaçao.cpp
LP_book/cap7_registroDadosHetero/: secrets.py  (+8 more)
Python_book/: cap3_1.py
Python_projects/: 1_strings.py  2_strings.py
codeforce/: .watermelon.cpp.swp  raiz.cpp  soma.py  watermelon.cpp  watermelon.py
entendimento_diagramas/: .listaPy_cap06.swp
output/: seq_10  seq_11  seq_12  seq_13
shell-linux/: adv_commands.sh  hello_world.sh  raw_data_20230908  rx_poc.sh  tempetures.txt
(+221 files in other folders)
