cmake_minimum_required(VERSION 3.25)
project(Logica_Prog_C_)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(Logica_Prog_C_
        codeforce/watermelon.cpp
        LP_book/Cap1_sequencia/hipo.cpp
        LP_book/Cap1_sequencia/seq_B15.cpp
        LP_book/Cap1_sequencia/seqB_1.cpp
        LP_book/Cap1_sequencia/seqB_10.cpp
        LP_book/Cap1_sequencia/seqB_11.cpp
        LP_book/Cap1_sequencia/seqB_12.cpp
        LP_book/Cap1_sequencia/seqB_13.cpp
        LP_book/Cap1_sequencia/seqB_14.cpp
        LP_book/Cap1_sequencia/seqB_2.cpp
        LP_book/Cap1_sequencia/seqB_3.cpp
        LP_book/Cap1_sequencia/seqB_4.cpp
        LP_book/Cap1_sequencia/seqB_5.cpp
        "LP_book/Cap2_decisao/Lista 2 LP/decL_1.c"
        "LP_book/Cap2_decisao/Lista 2 LP/decL_2.c"
        "LP_book/Cap2_decisao/Lista 2 LP/decL_3.c"
        "LP_book/Cap2_decisao/Lista 2 LP/decL_min.c"
        LP_book/Cap2_decisao/src/src/main.c
        LP_book/Cap2_decisao/decB_1.cpp
        LP_book/Cap2_decisao/decB_10.cpp
        LP_book/Cap2_decisao/decB_11.cpp
        LP_book/Cap2_decisao/decB_12.cpp
        LP_book/Cap2_decisao/decB_2.cpp
        LP_book/Cap2_decisao/decB_3.cpp
        LP_book/Cap2_decisao/decB_4.cpp
        LP_book/Cap2_decisao/decB_5.cpp
        LP_book/Cap2_decisao/decB_6.cpp
        LP_book/Cap2_decisao/decB_7.cpp
        LP_book/Cap2_decisao/decB_8.cpp
        LP_book/Cap2_decisao/decB_9.cpp
        LP_book/Cap2_decisao/min_text.cpp
        "LP_book/Cap3_looping/OBI provas/2021/tenis.cpp"
        "LP_book/Cap3_looping/OBI provas/2022/maior_cpp.cpp"
        LP_book/Cap3_looping/loopB_1.cpp
        LP_book/Cap3_looping/loopB_10.c
        LP_book/Cap3_looping/loopB_11.c
        LP_book/Cap3_looping/loopB_2.cpp
        LP_book/Cap3_looping/loopB_3.cpp
        LP_book/Cap3_looping/loopB_4.cpp
        LP_book/Cap3_looping/loopB_5.cpp
        LP_book/Cap3_looping/loopB_6.cpp
        LP_book/Cap3_looping/loopB_7.c
        LP_book/Cap3_looping/loopB_8.c
        LP_book/Cap3_looping/loopB_9.c
        LP_book/Cap4_listas/arrays/lista_a.cpp
        LP_book/Cap4_listas/arrays/lista_b.cpp
        LP_book/Cap4_listas/arrays/lista_c.cpp
        LP_book/classes/decisions/02_05-2.cpp
        LP_book/classes/decisions/02_05.cpp
        LP_book/classes/decisions/DecLista_1.cpp
        LP_book/classes/decisions/desconto.cpp
        LP_book/decB_01.cpp
        LP_C++/lista_decisão/02_05-2.cpp
        LP_C++/lista_decisão/02_05.cpp
        LP_C++/lista_decisão/decAula_a.cpp
        LP_C++/lista_decisão/decLista1_1.cpp
        LP_C++/lista_decisão/decLista1_2.cpp
        LP_C++/lista_decisão/decLista1_3.cpp
        LP_C++/lista_decisão/decLista1_4.cpp
        LP_C++/lista_decisão/decLista1_5.cpp
        LP_C++/lista_decisão/decLista1_6.cpp
        LP_C++/lista_decisão/decLista1_min.cpp
        LP_C++/lista_decisão/desconto.cpp
        LP_C++/lista_loop/loop_1.cpp
        LP_C++/lista_loop/loop_2.cpp
        LP_C++/lista_loop/loop_3.cpp
        LP_C++/lista_loop/loop_4.cpp
        LP_C++/lista_loop/loop_5.cpp
        LP_C++/lista_loop/loop_6.cpp
        LP_C++/lista_loop/loop_7.cpp
        LP_C++/lista_loop/loop_8.cpp
        LP_C++/lista_loop2/loop_1.cpp
        LP_C++/lista_loop2/loop_2.cpp
        LP_C++/lista_loop2/loop_3.cpp
        LP_C++/lista_loop2/loop_4.cpp
        LP_C++/lista_sequencia/seq_1.cpp
        LP_C++/lista_sequencia/seq_10.cpp
        LP_C++/lista_sequencia/seq_11.cpp
        LP_C++/lista_sequencia/seq_12.cpp
        LP_C++/lista_sequencia/seq_13.cpp
        LP_C++/lista_sequencia/seq_14.cpp
        LP_C++/lista_sequencia/seq_3.cpp
        LP_C++/lista_sequencia/seq_4.cpp
        LP_C++/lista_sequencia/seq_5.cpp
        LP_C++/lista_sequencia/seq_6.cpp
        LP_C++/lista_sequencia/seq_7.cpp
        LP_C++/lista_sequencia/seq_8.cpp
        LP_C++/lista_sequencia/seq_9.cpp
        LP_C++/lista_vetores/vet_1.cpp
        LP_C++/lista_vetores/vet_2.cpp
        LP_C++/lista_vetores/vet_3.cpp
        LP_C++/lista_vetores/vet_4.cpp
        LP_C++/lista_vetores/vet_5.cpp
        LP_C++/loops/loop_1.cpp
        LP_C++/loops/loop_2.cpp
        LP_C++/vetores/ex_1.cpp
        LP_C++/vetores/ex_2.cpp
        LP_C++/vetores/ex_3.cpp
        LP_C++/vetores/ex_4.cpp)
